Fix menu being invisible in mobile version.
Also fix wrong logo for collapsible nav.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -57,6 +57,10 @@
   margin-top: -6px;
 }
 
+.navbar-sidebar  .navbar__logo img {
+    content: url('/img/logo-color-dark.svg');
+}
+
 .navbar__link--active {
   font-weight: bold;
 }
@@ -68,6 +72,10 @@
 .navbar__link--active {
   font-weight: bold;
   color: #fcbe6e;
+}
+
+.navbar__toggle {
+  color: #ffffff !important;
 }
 
 .footer {
